# HydraPaper

./: .gitignore  .gitlab-ci.yml  README.md  build.sh  meson.build  pyproject.toml
data/: meson.build  org.gabmus.hydrapaper.appdata.xml.in  org.gabmus.hydrapaper.desktop.in  org.gabmus.hydrapaper.gresource.xml
data/ui/: aboutdialog.ui.in  gtk_style.css  headerbar.blp  meson.build  monitors_flowbox_item.blp  shortcutsWindow.blp  wallpaper_flowbox_item.blp  wallpaper_flowbox_item_popover.blp  wallpapers_flowbox.blp  wallpapers_folders_view.blp  wp_mode_popover_menu.blp
docs/: hydrapaper.1.md  meson.build
hydrapaper/: __main__.py  app_window.py  apply_wallpapers.py  base_app.py  base_preferences.py  confManager.py  folder_store.py  get_desktop_environment.py  get_gnome_dark_mode.py  headerbar.py  is_flatpak.py  is_image.py  main_stack.py  monitor_parser.py  monitors_flowbox.py  preferences_window.py  search_bar.py  set_wallpaper_portal.py  slideshow_listbox_row.py  threading_helper.py  wallpaper_flowbox_item.py  wallpaper_merger.py  wallpapers_flowbox.py  wallpapers_folder_listbox_row.py  wallpapers_folders_view.py
misc/: org.gabmus.hydrapapergit.json
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  it.po  pt_BR.po  ru.po  sv.po  tr.po  update_potfiles.sh
